# m1-test

./: .clang-format  CMakeLists.txt  Metal.hpp  multiply.metal  prog.cpp
